<resources>
    <string name="app_name">La Sirene</string>
    <string name="cannot_refresh">Can\'t refresh feed</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="please_check_your_connection">Sorry, we cannot reach the internet. Please check your connection.</string>
    <string name="nothing">Nothing</string>
    <string name="products">Products</string>
    <string name="language">Language</string>
    <string name="about_us">ABOUT US</string>
    <string name="logout">Logout</string>
    <string name="phone_number">05xxxxxxx</string>
    <string name="ladies">LADIES</string>
    <string name="gents">GENTS</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_with_your_account">Sign in with your account.</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forget_password">Forget Password? Sign Up</string>
    <string name="we_care_about_your_hair">WE CARE ABOUT YOUR HAIR</string>
    <string name="confirm_sms">List your appointment now and receive a immediate confirmation via SMS. TERMS AND CONDITIONS APPLY</string>
    <string name="continue1">CONTINUE</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="services">SERVICES</string>
    <string name="delete">DELETE</string>
    <string name="profile">PROFILE</string>
    <string name="submit">SUBMIT</string>
    <string name="contact_us" translatable="false">Contact Us</string>
    <string name="news">NEWS</string>
    <string name="cart">CART</string>
    <string name="see_more">See more</string>
    <string name="see_less">See less</string>
    <string name="serivce_has_been_added">A service has been added to your cart</string>
    <string name="valid_email">Please enter your email</string>
    <string name="valid_password">Please enter your password</string>
    <string name="please_wait">Please wait</string>
    <string name="email_or_password_incorrent">Email or password is incorrect</string>
    <string name="password_not_match">Password does not match</string>
    <string name="date_of_birth">dd-mm-yyyy</string>
    <string name="valid_full_name">Please enter your name</string>
    <string name="valid_phone">Please enter your phone</string>
    <string name="valid_date_of_birth">Please enter your date of birth</string>
    <string name="done">Done</string>
    <string name="more_sections">More Sections</string>
    <string name="our_social_networks">Our Social Networks</string>
    <string name="powered_by">Powered by: </string>
    <string name="copyright"><![CDATA[© Copyright LA Sirene BEAUTY & SPA. All Rights Reserved.]]></string>
    <string name="la_sirene_team">La Sirene Team</string>
    <string name="four_seasons" translatable="false">Four Seasons</string>
    <string name="al_wasl">Al Wasl</string>
    <string name="burj_al_arab">Burj Al Arab</string>
    <string name="jbr">JBR</string>
    <string name="add_more">ADD MORE</string>
    <string name="time">TIME</string>
    <string name="date">DATE</string>
    <string name="next">NEXT</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="location">LOCATION:</string>
    <string name="open">OPEN</string>
    <string name="completed">COMPLETED</string>
    <string name="my_booking">MY BOOKINGS</string>
    <string name="booking_details">BOOKING DETAILS</string>
    <string name="pending">PENDING</string>
    <string name="booking_id">BOOKING ID</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="your_phone_is_incorrect">Your phone number is incorrect</string>
    <string name="our_location">Our Locations</string>
    <string name="membership">MEMBERSHIP</string>
</resources>
