<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_opacity_rect">


    <LinearLayout
        android:id="@+id/popup_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_opacity_rect"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_news_white"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:layout_marginLeft="30sp"
                android:textColor="@color/white"
                android:text="@string/news"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_bookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_time_white"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:layout_marginLeft="30sp"
                android:textColor="@color/white"
                android:text="@string/my_booking"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_contact_us_white"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:layout_marginLeft="30sp"
                android:textColor="@color/white"
                android:text="@string/contact_us"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/membership"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_user_white"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:layout_marginLeft="30sp"
                android:textColor="@color/white"
                android:text="@string/membership"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#979797"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">

            <customfonts.MyTextView_Roboto_Regular
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="More Sections"
                android:textColor="#f2f2f2"
                android:textSize="13.3sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_user_white"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:layout_marginLeft="30sp"
                android:textColor="@color/white"
                android:text="@string/profile"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_logout_white"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:layout_marginLeft="30sp"
                android:textColor="@color/white"
                android:text="@string/logout"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>


